Separate support page added

--- a/_config.yml
+++ b/_config.yml
@@ -20,6 +20,8 @@ mainmenu:
     slug: 
   - title: Documentation
     slug: documentation
+  - title: Support
+    slug: support
 
 # Conversion
 markdown: kramdown
