--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: Oxid eCommerce Module
 meta_description: Documentation and download of the Oxid eCommerce Module
 baseurl: /ecommerce-module-oxid/
 remote_base_url: https://affilinet.github.io
-devhub_url: https://affilinet.github.io
+devhub_url: http://developer.affili.net
 
 # Follow
 twitter: http://twitter.com/affilinet_news
